# freezeyt

./: .gitattributes  .gitignore  CHANGELOG.md  LICENCE.MIT  README.md  demo_app.py  demo_app_2pages.py  demo_app_2pages_cycle.py  demo_app_3pages_deep.py  demo_app_external_link.py  demo_app_url_for.py  freezeyt.py  index.html  mkdocs.yml  pyproject.toml  requirements-blog.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_check_mimetype.py  test_demo.py  test_get_links.py  test_parse_absolute_url.py  test_url_to_filename.py  tox.ini  wsgi_demo.py  wsgi_demo_2pages.py
.github/workflows/: freezeyt_blog.yaml  main.yml  platforms.yml
concepts_list/: index.html
doc/: encoding-notes.txt  plugin-notes.md
docs/: config.md  contrib.md  index.md  licence.md  pyapi.md  why.md
docs/css/: pygments-friendly.css  pygments-nord.css  pygments.css
freezeyt/: __init__.py  __main__.py  absolute_url.py  actions.py  asgi_middleware.py  cli.py  compat.py  compat_asgiref_typing.py  dictsaver.py  encoding.py  extra_files.py  filesaver.py  flask_frozen.py  freezer.py  freezing.py  getlinks_css.py  getlinks_html.py  hooks.py  middleware.py  mimetype_check.py  plugins.py  progressbar.py  saver.py  status_handlers.py  types.py  url_finders.py  urls.py  util.py  wsgi_middleware.py  wsgi_to_asgi.py
freezeyt_blog/: app.py  config.yaml  lekce6.md  lesson7.md  meeting9.md
freezeyt_blog/articles/: concepts_list.md  lekce10.md  lekce11.md  meeting01.md  meeting02.md  meeting03.md  meeting05.md  meeting06.md  meeting07.md  meeting08.md  meeting09-cs.md  meeting09.md  meeting11.md  meeting12.md  meeting13.md  meeting14.md  meeting15.md  meeting16.md  meeting17.md  meeting18.md  meeting19.md  meeting20.md  meeting22.md  meeting23.md  meeting24.md  meeting25.md  meeting26.md  meeting27.md  meeting28.md  meeting30.md  meeting31.md  meeting32.md  meeting33.md  meeting34.md  meeting35.md  meeting38.md  meeting39.md  meeting49.md  meeting51.md  meeting9.md  (+1 more)
freezeyt_blog/content/articles/: lekce10.md
freezeyt_blog/static/: pygments.css
freezeyt_blog/templates/: base.html  index.html  post.html
meeting01/: index.html
meeting02/: index.html
meeting03/: index.html
meeting05/: index.html
meeting06/: index.html
meeting07/: index.html
meeting08/: index.html
meeting09/: index.html
meeting09-cs/: index.html
meeting09-en/: index.html
meeting10/: index.html
meeting11/: index.html
meeting12/: index.html
meeting13/: index.html
meeting14/: index.html
meeting15/: index.html
meeting16/: index.html
meeting17/: index.html
meeting18/: index.html
meeting19/: index.html
meeting20/: index.html
meeting22/: index.html
meeting23/: index.html
meeting24/: index.html
meeting25/: index.html
meeting26/: index.html
meeting27/: index.html
meeting28/: index.html
meeting30/: index.html
meeting31/: index.html
meeting32/: index.html
meeting33/: index.html
meeting34/: index.html
meeting35/: index.html
meeting38/: index.html
meeting39/: index.html
meeting49/: index.html
meeting51/: index.html
python_concepts/: index.html
requirements/: requirements-dev.txt  requirements-mypy.txt  requirements.txt
tests/: conftest.py  test___all__.py  test_add_port.py  test_app_url.py  test_asgi_middleware.py  test_cancel_tasks.py  test_check_mimetype.py  test_cleanup.py  test_click_cli.py  test_concurrency.py  test_config.py  test_dictsaver.py  test_encoding.py  test_expected_output.py  test_extra_files.py  test_frecognizer.py  test_frozenflask_compat.py  test_get_css_links.py  test_get_html_links.py  test_get_links.py  test_get_links_css.py  test_get_mimetype.py  test_gh_pages.py  test_github_database.py  test_github_mimetypes.py  test_handle_redirects.py  test_hooks.py  test_import_variable_from_module.py  test_incomplete_dir.py  test_is_external.py  test_logging.py  test_middleware.py  test_mime_db_mimetype.py  test_mimetype_checker.py  test_multierror.py  test_parse_absolute_url.py  test_parse_mimetype_db.py  test_parse_prefix_url.py  test_plugins.py  test_reason.py  (+10 more)
tests/fixtures/: demo_app.py  demo_app_2pages_cycle.py
tests/fixtures/app_2_broken_links/: app.py  error.txt
tests/fixtures/app_2pages/: app.py
tests/fixtures/app_2pages_cycle/: app.py
tests/fixtures/app_3pages_deep/: app.py
tests/fixtures/app_3pages_redirects/: app.py
tests/fixtures/app_404_not_found/: app.py
tests/fixtures/app_broken_link/: app.py
tests/fixtures/app_cleanup_config/: app.py
tests/fixtures/app_double_response_start/: app.py  error.txt
tests/fixtures/app_empty_link/: app.py
tests/fixtures/app_external_link/: app.py
tests/fixtures/app_fail_fast/: app.py  error.txt
tests/fixtures/app_fast_fail/: app.py
tests/fixtures/app_image/: app.py
tests/fixtures/app_links_css/: app.py
tests/fixtures/app_nonstandard_name/: application.py
tests/fixtures/app_redirect_external/: app.py  error.txt
tests/fixtures/app_redirect_to_same_static_file/: app.py
tests/fixtures/app_redirects/: app.py
tests/fixtures/app_simple/: app.py
tests/fixtures/app_static_tree/: app.py
tests/fixtures/app_status_handler/: app.py
tests/fixtures/app_structured/: app.py
tests/fixtures/app_url_for/: app.py
tests/fixtures/app_url_for_port_prefix/: app.py
tests/fixtures/app_url_for_prefix/: app.py
tests/fixtures/app_url_for_prefix_https/: app.py
tests/fixtures/app_various_errors/: app.py  error.txt
tests/fixtures/app_with_config_variable/: app.py  application.py
tests/fixtures/app_with_extra_files/: app.py
tests/fixtures/app_with_extra_page/: app.py
tests/fixtures/app_with_extra_page_deep/: app.py
tests/fixtures/app_with_extra_page_generator/: app.py
tests/fixtures/app_with_missing_extra_page/: app.py  error.txt
tests/fixtures/app_with_redirect_to_same_frozen_file/: app.py
tests/fixtures/app_wrong_extra_file/: app.py  error.txt
tests/fixtures/app_wrong_mimetype/: app.py  error.txt
tests/fixtures/bottle_app/: app.py
tests/freezeyt_configuration/: test_config.py  test_plugins.py
(+111 files in other folders)
