[metadata]
name = freezeyt
version = 0.1
url = https://github.com/encukou/freezeyt
description = Generate static web pages from WSGI apps
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    html5lib
    click
    css-parser
    pyyaml
    dataclasses; python_version<"3.7"
    Werkzeug

[options.entry_points]
console_scripts =
    freezeyt = freezeyt.cli:main
