[metadata]
name = freezeyt
version = 1.0
url = https://github.com/encukou/freezeyt
description = Generate static web pages from WSGI apps
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    html5lib
    click
    css-parser
    pyyaml
    dataclasses; python_version<"3.7"
    Werkzeug
    enlighten

[options.extras_require]
dev =
    pytest >= 6.2.0
    flask
    pyflakes
    Django
    bottle
    falcon
blog =
    flask
    markdown-it-py
    pygments
typecheck =
    mypy
    types-click
    types-PyYAML
    types-Werkzeug
    types-html5lib


[options.entry_points]
console_scripts =
    freezeyt = freezeyt.cli:main
